@@ -1,6 +1,6 @@
 {
   "name": "simp-svckill",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "author": "SIMP Team",
   "summary": "Disables all services that are not controlled by Puppet.",
   "license": "Apache-2.0",
@@ -45,10 +45,6 @@
     {
       "name": "puppet",
       "version_requirement": "4.x"
-    },
-    {
-      "name": "pe",
-      "version_requirement": ">= 2016.2.0"
     }
   ],
   "data_provider": "hiera"
